--- a/gb/20/10/6/n12458017.md
+++ b/gb/20/10/6/n12458017.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/whhoub340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/whhoub340/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/whhoub340/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/whhoub340/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/whhoub340/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【严真点评】:“十月惊奇”首发两重磅消息</h2>
-<a href="https://git.io/JUAP2"><img width="600" src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/whhoub340/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2torrlf4djx10.cloudfront.net/M7b16kmSb"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>外交部大实话：“十月惊奇”首发两大重磅消息。（大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年10月07日讯】<ahref="https://github.com/whhoub340/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统及夫人感染中共病毒，和禁止共产党员移民美国，为“十月惊奇”首发的两大重磅消息。</p>
-<p>10月2日凌晨，美国总统<ahref="https://github.com/whhoub340/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>在自己的推特上宣布，他和第一夫人的新冠病毒检测呈阳性，并启动隔离程序。消息一出震惊了世界。各国政要纷纷送上祝福，全球股市大幅下跌。当然，“墙国”人民不出意外地把这当作国殇献礼，弹冠相庆。向世界展示共产邪教教化出的物种是多么的没有人性。</p>
-<p><center><a src=""></a><a href="https://git.io/JUAP2"><img width="600" src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/whhoub340/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/TGH7W3vYggU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>同时也印证了歌德那句话：“当人变得真正低劣时，除了高兴别人的不幸外，已无其它乐趣可言。”以此来形容一些中国人，可谓严丝合缝。</p>
+	<p>【大纪元2020年10月07日讯】<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统及夫人感染中共病毒，和禁止共产党员移民美国，为“十月惊奇”首发的两大重磅消息。</p>
+<p>10月2日凌晨，美国总统<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>在自己的推特上宣布，他和第一夫人的新冠病毒检测呈阳性，并启动隔离程序。消息一出震惊了世界。各国政要纷纷送上祝福，全球股市大幅下跌。当然，“墙国”人民不出意外地把这当作国殇献礼，弹冠相庆。向世界展示共产邪教教化出的物种是多么的没有人性。</p>
+<p><center><a src=""></a><a href="https://d2torrlf4djx10.cloudfront.net/M7b16kmSb"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/TGH7W3vYggU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>同时也印证了歌德那句话：“当人变得真正低劣时，除了高兴别人的不幸外，已无其它乐趣可言。”以此来形容一些中国人，可谓严丝合缝。</p>
 <p>同日稍晚，“感到疲劳，但精神良好”的川普被送到距离白宫不远的沃尔特·里德（Walter Reed）国家军事医学中心接受治疗。</p>
 <p>在第二天的新闻发布会上，主治医生说没有任何值得担心的事。川普总统的所有器官状况正常，呼吸正常，精神状况很好。一大早还开心地说他“可以出医院了”。川普这天还做了很多工作。</p>
 <p>对于何时出院，医生谨慎地回答“很难说”，但这个治疗计划是5天，5天后如果不需要，川普就可以回白宫了。这里也祝愿川普总统和夫人早日康复。因为中共未除，道远任重。</p>
@@ -22,49 +22,48 @@
 <p>这项政策坐实了7月中旬《纽约时报》曝出的有关“美国政府计划全面禁止中共党员及其家人入境美国”的传言，只是把“入境”改成了“移民”。</p>
 <p>不过按照目前中美脱钩的速度，从禁止中共党员移民，到禁止中共党员入境，恐怕用不了太长时间。很想知道当时称此举“可悲”、“荒唐”的华春莹、和扬言“美方如果真的这样做，比中美断交更严重”的胡锡进，现在该如何接盘？</p>
 <p>但网开有一面，出路有一条，就是赶紧上网搜索、或找到遍布世界各地的退党服务中心，声明退党，抛弃中共。给自己留一份希望和未来。</p>
-<p>【<ahref="https://github.com/whhoub340/djy/blob/master/gb/tag/%E4%B8%A5%E7%9C%9F%E7%82%B9%E8%AF%84.md#1">严真点评</a>】制作组</p>
+<p>【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%A5%E7%9C%9F%E7%82%B9%E8%AF%84.md#1">严真点评</a>】制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12456048.md#1">杨威：川普展示强人精神 成功演绎竞选活动</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12456141.md#1">【远见快评】白宫被“攻陷” 川普病愈反击？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12456305.md#1">【拍案惊奇】川普说出院是奇迹 习要当太上皇续权？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12456363.md#1">【新闻聚焦10.6】川普回白宫 称“状态更好”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/6/n12456048.md#1">杨威：川普展示强人精神 成功演绎竞选活动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/6/n12456141.md#1">【远见快评】白宫被“攻陷” 川普病愈反击？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/6/n12456305.md#1">【拍案惊奇】川普说出院是奇迹 习要当太上皇续权？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/6/n12456363.md#1">【新闻聚焦10.6】川普回白宫 称“状态更好”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/whhoub340/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/12/18/n3755139.md#1" target="_blank">佚名：迫害法轮功的中共人员犯了哪些法</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10079307.md#1" target="_blank">林辉：周恩来主任秘书自杀 亲戚文革遭殃</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/25/n12429391.md#1">奥妙莫名中秋节神迹  搭起仙凡之桥</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12458017.md#1">【严真点评】:“十月惊奇”首发两重磅消息</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12456305.md#1">【拍案惊奇】川普说出院是奇迹 习要当太上皇续权？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12456300.md#1">【西岸观察】川普为何不怕中共病毒？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451696.md#1">中秋节已过 没卖掉的月饼去哪了</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/30/n12443120.md#1">在Costco购买这八种食品 最合适一家人吃</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/3/n12451102.md#1">【新闻看点】川普试用新疗法 习要动王岐山？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12452582.md#1">李荣浩纠正谢霆锋一叫法 杨丞琳打趣回应</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12450929.md#1">《艾蜜莉在巴黎》影评：莉莉柯林斯大放异彩 将好故事发扬光大</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12455254.md#1">六年前大陆拍戏患怪病 吴孟达暴瘦近照曝光</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12452790.md#1">刘德华黄历生日 捧大盆红鸡蛋庆祝</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12455857.md#1">范冰冰确定复出 好莱坞新片《355》海报曝光</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451602.md#1">无人机拍到惊人照片：心形鲑鱼群包围鲨鱼</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451754.md#1">中共官媒谎称：台士兵一半不识字 开战就投降</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/30/n12443080.md#1">【直播】乳房有硬块是癌症？名医教你抗乳癌</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451880.md#1">从意大利到英国 10岁男童走2800公里去看奶奶</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/whhoub340/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/whhoub340/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/6/n12458017.htm">【严真点评】:“十月惊奇”首发两重磅消息</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/6/n12458017.htm">【严真点评】:“十月惊奇”首发两重磅消息</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12458017.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/whhoub340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/whhoub340/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/whhoub340/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/6/n12458017.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
